# vcpkg-example

./: CMakeLists.txt  main.cpp
